look & feel updates to four f's section of front page - fixed yellow gradient at top of page - added four f's icons - adjusted padding throughout widget - added 'main-page-section' classed div around the 'what makes fedora great?' and 'what can you do with fedora' sections, and dropped the class from the h2s, rewriting the css to compensate - replaced filler text with real copy for 4f's - h4 adjustments for four f's - text alignment - centered

--- a/fedoraproject.org/static/css/fedora960.css
+++ b/fedoraproject.org/static/css/fedora960.css
@@ -299,8 +299,9 @@ a:hover {
     max-width: 520px;
 }
 
-.main-page-section {
+.main-page-section h2 {
     background-color: #C4D0E3;
+    color: #3c6eb4;
     padding: 10px;
     text-align: center;
     margin-top: 1px;
@@ -308,6 +309,29 @@ a:hover {
 
 h3.main-section-hl { font-size: small; }
 h4.main-section-hl { font-size: small; }
+
+
+/* four-fs on front page */
+
+#four-fs img {
+  display: block;
+  margin: 1em auto;
+}
+
+#four-fs h4 {
+  text-transform: uppercase;
+  font-size: 1.1em;
+  color: #666;
+  text-align: center;
+}
+
+#four-fs  {
+  font-size: .9em;
+}
+
+#four-fs p {
+  height: 4.5em;
+}
 
 /* download splash page */
 .download-hl-box { background-color: #ececec; padding: 8px; }
